--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "n8n-monorepo",
-  "version": "1.95.0",
+  "version": "1.111.0",
   "private": true,
   "engines": {
-    "node": ">=20.15 <=22",
+    "node": ">=22.16",
     "pnpm": ">=10.2.1"
   },
   "packageManager": "pnpm@10.12.1",
